# futurewealth

./: input.txt  pyproject.toml
bank_data/: 1258_Barclays.xlsx  1275_Basler_Kantonalbank.xlsx  2938_KBC_Group.xlsx  3166_Lloyds_TSB_Bank.xlsx  3537_Nord_LB_Luxembourg.xlsx  4367_Standard_Chartered.xlsx  916_Bank_of_China.xlsx
data/: bank_indicators.json
output/: Bank A_scorecard.csv  Bank A_scorecard.json  Bank B_scorecard.csv  Bank B_scorecard.json  Bank of China_indicators.json  Barclays_indicators.json  Basler Kantonalbank_indicators.json  First Abu Dhabi Bank_indicators.json  KBC Group_indicators.json  Lloyds TSB Bank_indicators.json  Nord LB Luxembourg_indicators.json  Royal Bank of Canada_indicators.json  Standard Chartered_indicators.json  Test Bank_scorecard.csv  Test Bank_scorecard.json  bank_metrics.xlsx  fca_asset_manager_data.xlsx  fca_bank_data.xlsx  output.csv
output_bank_indicators/: 1258_Barclays_indicators.json  1275_Basler_Kantonalbank_indicators.json  2938_KBC_Group_indicators.json  3166_Lloyds_TSB_Bank_indicators.json  3404_First_Abu_Dhabi_Bank_indicators.json  3537_Nord_LB_Luxembourg_indicators.json  3932_Royal_Bank_of_Canada_indicators.json  4367_Standard_Chartered_indicators.json  916_Bank_of_China_indicators.json  bank_indicators_table.xlsx  summary.txt
output_bank_indicators/correlation_matrices/: 1258_Barclays_correlation.xlsx  1275_Basler_Kantonalbank_correlation.xlsx  2938_KBC_Group_correlation.xlsx  3166_Lloyds_TSB_Bank_correlation.xlsx  3404_First_Abu_Dhabi_Bank_correlation.xlsx  916_Bank_of_China_correlation.xlsx  (+3 more)
project/: parser.py
(+58 files in other folders)
