[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "data-tamer2410",email = "vitaliy.dayneko2410@gmail.com"}
]
requires-python = "3.12.*"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

